# hdfc-cc-parser-rs

./: .gitignore  Cargo.toml  README.md  analyze_spending.py
examples/: categories.json  dump.csv
pdf/pdf/src/: primitive.rs
pdf/pdf/src/object/: mod.rs
pdf/pdf/src/parser/: mod.rs
src/: main.rs  pdf_tools.rs
