[package]
name = "hdfc-cc-parser-rs"
version = "0.0.6"
authors = ["Joe Paul <joeirimpan@gmail.com>"]
repository = "https://github.com/joeirimpan/hdfc-cc-parser-rs"
keywords = ["HDFC", "credit card", "bill"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
chrono = "0.4.23"
csv = "1.1.6"
pdf = { path = "./pdf/pdf", features = [ "euclid" ] }
regex = "1.7.1"
pdf_encoding = "0.4.0"
euclid = "0.22.6"
log = "*"
clap = "4.1.8"

[profile.release]
strip = true
opt-level = "z"
lto = true
